Fixing flex style for wrapping.

--- a/style.css
+++ b/style.css
@@ -38,6 +38,9 @@ input[type=number], input[type=text]{
     display: flex;
     flex-direction: row;
     padding: 10px;
+    width: auto;
+    height: auto;
+    flex-wrap: wrap;
 }
 #navbar{
     text-align: right;
@@ -98,6 +101,8 @@ input[type=number], input[type=text]{
     max-width: 150px;
     margin: 10px;
     color: #fff;
+    min-width: 150px;
+    min-height: 150px;
 }
 .title{
     margin-top:0px;
